--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -3,3 +3,13 @@ app {
   port = 8080
   port = ${?PORT}
 }
+
+akka {
+  loglevel = "DEBUG"
+
+  actor {
+    debug {
+      lifecycle = on
+    }
+  }
+}
