--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -17,5 +17,12 @@ spec:
       containers:
         - name: patrickbrown-us
           image: 192.168.86.185:31836/hwg:0.1
+          resources:
+            requests:
+              memory: 2G 
+              cpu: "500m"
+            limits:
+              memory: 3G
+              cpu: 1
           ports:
             - containerPort: 8080
