--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -27,6 +27,6 @@ spec:
               cpu: 1
           env:
           - name: PORT
-            value: 8080
+            value: "8080"
           ports:
             - containerPort: 8080
